# rust-fem-solver

./: CONTACT_METHODS.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md
examples/: abaqus_import.rs  lagrange_binding.rs  penalty_friction.rs  simple_collision.rs
src/: lib.rs  types.rs
src/contact/: constraint.rs  friction.rs  lagrange.rs  mod.rs  penalty.rs
src/material/: elastic.rs  mod.rs
src/mesh/: element.rs  loader.rs  mod.rs  node.rs
src/output/: csv.rs  hdf5.rs  mod.rs  tecplot.rs  vtk.rs  xdmf.rs
src/solver/: assembly.rs  contact.rs  contact_solver.rs  linear.rs  mod.rs
